# Automated-File-Organiser

./: .gitignore  LICENSE  PKG-INFO  README.md  SOURCES.txt  __init__.py  __main__.py  categories.py  cli.py  config.py  documentation.md  entry_points.txt  exceptions.py  organizer.py  pyproject.toml  pyvenv.cfg  requirements.txt  summary.py  test_categories.py  test_cli.py  test_organizer.py  top_level.txt
