[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-file-organizer"
version = "1.0.0"
description = "A professional Python CLI for organizing files into type-based folders."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}

[project.scripts]
file-organizer = "automated_file_organizer.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]